parser/src/test/resources/corpus/valid/16_let_percentage.ff
rule "Let Percentage" {
  let mgmt = 1.5%
  let perf = 20%
}
