parser/src/test/resources/corpus/invalid/19_let_missing_name.ff
rule "Let Missing Name" {
  let = 1.5%
}
